# new_robot_rl_ros2

./: .gitignore  README.md
ref/wicom_roboarm(on pi)/: CMakeLists.txt  package.xml
ref/wicom_roboarm(on pi)/config/: servos.yaml
ref/wicom_roboarm(on pi)/launch/: wicom_roboarm.launch.py
ref/wicom_roboarm(on pi)/resource/: wicom_roboarm
ref/wicom_roboarm(on pi)/src/: scan-i2c.py  send_waypoints.py  testRL.py
ros2_ws/src/robot_arm2/: .gitignore  CMakeLists.txt  verify_env.py
ros2_ws/src/robot_arm2/config/: controllers_twin.yaml  new_arm_controllers.yaml
ros2_ws/src/robot_arm2/diagrams/: 1_system_block.mmd  2_training_flow.mmd  3_deployment_flow.mmd
ros2_ws/src/robot_arm2/launch/: digital_twin.launch.py  digital_twin_bringup.launch.py  digital_twin_sim_to_real.launch.py  display.launch.py  drawing_training.launch.py  gazebo.launch.py  new_arm_display.launch.py  rl_training.launch.py
ros2_ws/src/robot_arm2/models/aruco_board/: model.config  model.sdf
ros2_ws/src/robot_arm2/models/aruco_marker_1/: model.sdf
ros2_ws/src/robot_arm2/models/aruco_marker_2/: model.sdf
ros2_ws/src/robot_arm2/scripts/: fk_display.py  new_arm_joint_slider.py  regenerate_plot_from_csv.py  train_robot.py
ros2_ws/src/robot_arm2/scripts/agents/: td3_agent.py
ros2_ws/src/robot_arm2/scripts/checkpoints/: neural_ik.pth
ros2_ws/src/robot_arm2/scripts/checkpoints/sac_drawing_neuralIK/: actor_sac_best.pth  alpha_sac_best.pth  critic1_sac_best.pth  critic2_sac_best.pth
ros2_ws/src/robot_arm2/scripts/checkpoints/sac_neural_ik/: actor_sac_best.pth  actor_sac_ep_100.pth  actor_sac_ep_1000.pth  actor_sac_ep_125.pth  actor_sac_ep_150.pth  actor_sac_ep_175.pth  actor_sac_ep_200.pth  actor_sac_ep_225.pth  actor_sac_ep_25.pth  actor_sac_ep_250.pth  actor_sac_ep_275.pth  actor_sac_ep_300.pth  actor_sac_ep_325.pth  actor_sac_ep_350.pth  actor_sac_ep_375.pth  actor_sac_ep_400.pth  actor_sac_ep_425.pth  actor_sac_ep_450.pth  actor_sac_ep_475.pth  actor_sac_ep_50.pth  actor_sac_ep_500.pth  actor_sac_ep_525.pth  actor_sac_ep_550.pth  actor_sac_ep_575.pth  actor_sac_ep_600.pth  actor_sac_ep_625.pth  actor_sac_ep_650.pth  actor_sac_ep_675.pth  actor_sac_ep_700.pth  actor_sac_ep_725.pth  actor_sac_ep_75.pth  actor_sac_ep_750.pth  actor_sac_ep_775.pth  (+131 more)
ros2_ws/src/robot_arm2/scripts/deployment/: deploy_drawing_on_pi.py  deploy_on_pi.py  deploy_to_pi.sh  export_model.py  export_onnx_quantized.py  export_tflite.py  onnx_to_tflite.py  pi_servo_interface.py  pytorch_to_onnx.py  test1servo.py
ros2_ws/src/robot_arm2/scripts/digital_twin/: README_connection_test.md  gazebo_state_mirror.py  gazebo_to_real_mirror.py  test_ros2_connection.py  test_ros2_connection_pi.py
ros2_ws/src/robot_arm2/scripts/drawing/: drawing_config.py
ros2_ws/src/robot_arm2/scripts/rl/: drawing_environment.py  fk_ik_utils.py  rl_environment.py
ros2_ws/src/robot_arm2/urdf/: New.xacro  New_flipped.xacro
ros2_ws/src/robot_arm2/urdf/new_arm/: materials.xacro  new_arm.xacro
(+112 files in other folders)
